--- a/ContactInfo.Application/ContactInfo.Application.csproj
+++ b/ContactInfo.Application/ContactInfo.Application.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.12" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ContactInfo.Core\ContactInfo.Core.csproj" />
   </ItemGroup>
 
